fix: Simple adjustment of the position of the tooltip if it goes out of bounds

--- a/src/components/Tooltip/tooltip.css
+++ b/src/components/Tooltip/tooltip.css
@@ -15,6 +15,7 @@
 	background-color: #262626;
 	padding: var(--base-padding-vertical) var(--base-padding-horizontal);
 	color: #c7c7c7;
+	z-index: 1000;
 }
 
 .tooltip-content:before {
