--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 body {
 	height: 100vh;
 	margin: 0;
-	padding: 10px;
+	padding: 1rem;
 	display: flex;
 	justify-content: center;
 	font-family: Inter, Arial, sans-serif;
